--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  google_fonts: ^8.0.0
+  flutter_compass: ^0.8.1
+  geolocator: ^14.0.2
+  geocoding: ^4.0.0
+  quran: ^1.4.1
+  just_audio: ^0.10.5
+  audio_session: ^0.2.2
+  adhan: ^2.0.0+1
+  intl: ^0.20.2
+  hijri: ^3.0.0
+  shimmer: ^3.0.0
+  shared_preferences: ^2.5.4
+  marquee: ^2.3.0
+  flutter_local_notifications: ^20.0.0
+  timezone: ^0.10.1
+  flutter_timezone: ^5.0.1
+  perfect_volume_control: ^1.0.6
 
 dev_dependencies:
   flutter_test:
