--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   flutter_local_notifications: ^20.0.0
   timezone: ^0.10.1
   flutter_timezone: ^5.0.1
-  perfect_volume_control: ^1.0.6
+  flutter_volume_controller: ^1.3.4
 
 dev_dependencies:
   flutter_test:
